Refactor services (#7)
* refactor services according to new domain models. Removed subscribing will be made later

* remove unused imports

---------