@@ -1,13 +1,9 @@
 package com.mkh.tutoringplatform.service.impl;
 
-import com.mkh.tutoringplatform.domain.user.Group;
 import com.mkh.tutoringplatform.domain.user.Lesson;
 import com.mkh.tutoringplatform.domain.user.Student;
 import com.mkh.tutoringplatform.domain.user.Teacher;
-import com.mkh.tutoringplatform.repository.jpa.JpaGroupRepository;
-import com.mkh.tutoringplatform.repository.jpa.JpaLessonRepository;
-import com.mkh.tutoringplatform.repository.jpa.JpaStudentRepository;
-import com.mkh.tutoringplatform.repository.jpa.JpaTeacherRepository;
+import com.mkh.tutoringplatform.repository.LessonRepository;
 import com.mkh.tutoringplatform.service.LessonService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -16,48 +12,55 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 
 @Service
 @AllArgsConstructor
 @Transactional(readOnly = true)
 public class LessonServiceImpl implements LessonService {
-    private final JpaLessonRepository jpaLessonRepository;
-    private final JpaGroupRepository jpaGroupRepository;
-    private final JpaTeacherRepository jpaTeacherRepository;
-    private final JpaStudentRepository jpaStudentRepository;
+
+    private final LessonRepository lessonRepository;
 
     @Override
-    @Transactional
-    public void save(Lesson lesson, long group_id) {
-        Group group = jpaGroupRepository.getOne(group_id);
-        lesson.setGroup(group);
-        jpaLessonRepository.save(lesson);
+    public void save(Lesson lesson) {
+        lessonRepository.save(lesson);
     }
 
     @Override
-    public List<Lesson> getLessonByTeacherId(long teacher_id, long student_id) {
-        Teacher teacher = jpaTeacherRepository.getOne(teacher_id);
-        Student student = jpaStudentRepository.getOne(student_id);
-        return student.getGroups().stream().filter(group -> group.getTeacher().equals(teacher)).map(Group::getLessons).flatMap(List::stream).collect(Collectors.toList());
+    public List<Lesson> getTeacherLessons(long teacherId) {
+        return lessonRepository.getTeacherLessons(teacherId);
     }
 
     @Override
-    public List<Lesson> getLessonInAboutOneDay(Student student) {
-        student = jpaStudentRepository.getOne(student.getId());
+    public List<Lesson> getTodayLessonForStudent(Student student) {
+        return getAllLessonsFromGroups(student.getGroupsIds(), getPredicateForTodayLessons());
+    }
+
+    @Override
+    public List<Lesson> getTodayLessonForTeacher(Teacher teacher) {
+        return getAllLessonsFromGroups(teacher.getGroupsIds(), getPredicateForTodayLessons());
+    }
+
+    @Override
+    public List<Lesson> getLessonsFromGroup(long groupId) {
+        return lessonRepository.getLessonsFromGroups(List.of(groupId));
+    }
+
+    @Override
+    public void deleteLesson(long lessonId) {
+        lessonRepository.deleteById(lessonId);
+    }
+
+    private Predicate<Lesson> getPredicateForTodayLessons() {
         Calendar calendar = Calendar.getInstance();
         calendar.setTime(new Date());
         calendar.add(Calendar.DAY_OF_YEAR, 1);
         Date tomorrow = calendar.getTime();
-        return student.getGroups().stream().map(Group::getLessons).flatMap(List::stream).filter(lesson -> lesson.getTimeStart().before(tomorrow)).collect(Collectors.toList());
+        return lesson -> lesson.getTimeStart().before(tomorrow);
     }
-    @Override
-    public List<Lesson> getLessonInAboutOneDay(Teacher teacher) {
-        teacher = jpaTeacherRepository.getOne(teacher.getId());
-        Calendar calendar = Calendar.getInstance();
-        calendar.setTime(new Date());
-        calendar.add(Calendar.DAY_OF_YEAR, 1);
-        Date tomorrow = calendar.getTime();
-        return teacher.getGroups().stream().map(Group::getLessons).flatMap(List::stream).filter(lesson -> lesson.getTimeStart().before(tomorrow)).collect(Collectors.toList());
+
+    private List<Lesson> getAllLessonsFromGroups(List<Long> groupIds, Predicate<Lesson> predicateForLessons) {
+        var lessons = lessonRepository.getLessonsFromGroups(groupIds);
+        return lessons.stream().filter(predicateForLessons).toList();
     }
 }
